deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
        stage: prod
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: backend-app
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend-service
    stage: prod
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: backend-app
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: corona-helfer-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - corona-helfer-80865a40c6ef962c996c47e3878b673e-0000.eu-de.containers.appdomain.cloud
        - corona-helfer.eu-de.containers.appdomain.cloud
        - dev.coronahelfer.eu
        - coronahelfer.eu
      secretName: dev-coronahelfer-eu-tls-secret
  rules:
    - host: coronahelfer.eu
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-service
              servicePort: 80
    - host: coronahelfer.eu
      http:
        paths:
          - path: /api
            backend:
              serviceName: backend-service
              servicePort: 3000
    - host: dev.coronahelfer.eu
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-service
              servicePort: 80
    - host: dev.coronahelfer.eu
      http:
        paths:
          - path: /api
            backend:
              serviceName: backend-service
              servicePort: 3000
    - host: corona-helfer-80865a40c6ef962c996c47e3878b673e-0000.eu-de.containers.appdomain.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-service
              servicePort: 80
    - host: corona-helfer-80865a40c6ef962c996c47e3878b673e-0000.eu-de.containers.appdomain.cloud
      http:
        paths:
          - path: /api
            backend:
              serviceName: backend-service
              servicePort: 3000
    - host: corona-helfer.eu-de.containers.appdomain.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-service
              servicePort: 80
    - host: corona-helfer.eu-de.containers.appdomain.cloud
      http:
        paths:
          - path: /api
            backend:
              serviceName: backend-service
              servicePort: 3000
